Bug 451980 - Brush option Fade cannot be configured by dragging the slider (instead of clicking)
Summary: Brush option Fade cannot be configured by dragging the slider (instead of cli...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-03-28 01:26 UTC by tomtomtomreportingin
Modified: 2022-03-29 07:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tomtomtomreportingin 2022-03-28 01:26:49 UTC
Occurs in master git 3aeeae, 4d849b2, and 907120b. Does not occur in Krita 5.0 or master git fdce911 from about a couple months ago.

SUMMARY
If the user drags the brush option Fade slider instead of clicking it or using other methods, the Fade value will not change.

This does not seem to be a result of https://invent.kde.org/graphics/krita/-/merge_requests/1037 as reverting all of the related commits doesn't appear to resolve the issue. 

This seems very easy to fix simply by removing the signal blocker on dragging the aspect locking sliders, but I do not know if that's desirable as most of the other sliders in the widget block signals on drag (for performance reasons?). However, this is not the case for option strength sliders on the curve pages (Softness, Scatter, Pattern Strength, etc.), as they'll change value immediately during the dragging process.

STEPS TO REPRODUCE
1. Select Basic 2 Opacity brush.
2. Drag the Fade slider.

OBSERVED RESULT
Fade value isn't changed. Verify further by drawing on the canvas.

EXPECTED RESULT
Fade value should change when the slider is dragged.

ADDITIONAL INFORMATION
Linux/KDE Plasma: Debian sid
KDE Plasma Version: 5.24.3
KDE Frameworks Version: 5.90.0
Qt Version: 5.12.12 (appimage)
Comment 1 Dmitry Kazakov 2022-03-28 15:57:44 UTC
I think I have seen this bug recently. I will check this bug :)
Comment 2 Dmitry Kazakov 2022-03-29 07:38:17 UTC
Git commit 9a2c4189bbf22f68c04ee84cfefb3e8f49c7451a by Dmitry Kazakov.
Committed on 29/03/2022 at 07:37.
Pushed by dkazakov into branch 'master'.

Fix brush preview update after dragging Fade slider

When updates while dragging are disabled, we still need to emit
the update signal at the end of the drag operation.

M  +22   -0    libs/ui/kis_aspect_ratio_locker.cpp
M  +1    -0    libs/ui/kis_aspect_ratio_locker.h
M  +6    -0    libs/widgetutils/kis_slider_spin_box.h
M  +1    -0    libs/widgetutils/kis_slider_spin_box_p.h

https://invent.kde.org/graphics/krita/commit/9a2c4189bbf22f68c04ee84cfefb3e8f49c7451a