Fix brush preview update after dragging Fade slider

When updates while dragging are disabled, we still need to emit
the update signal at the end of the drag operation.

BUG:451980