libs/widgetutils/kis_slider_spin_box_p.h
@@ -771,6 +771,7 @@ public:
                 }
 
                 m_isDragging = false;
+                emit m_q->draggingFinished();
             }
             return true;
         }
